--- a/TPE2/Makefile
+++ b/TPE2/Makefile
@@ -1,16 +1,18 @@
 CC = gcc
+YACC = yacc
 FLEX = flex
 FILES = lex.yy.c y.tab.c
 LEXFILES = code.l
+YACCFILES = code.y
 OUT_EXE=tp
-COPTS= -Wall -g -lfl
+YACCFLAGS = -dv
 
 all:
-	yacc -d -v code.y
-	lex code.l
-	gcc -o parser lex.yy.c y.tab.c -ly
+	$(YACC) $(YACCFLAGS) $(YACCFILES)
+	$(FLEX) $(LEXFILES)
+	$(CC) -o $(OUT_EXE) $(FILES) -ly
+	-rm -f *.yy.c *.tab.c *.tab.h
 
 clean:
-	-rm -f *.o core
+	-rm -f y.output
 	-rm -f $(OUT_EXE)	
-
